--- a/public/styles/index/_main.scss
+++ b/public/styles/index/_main.scss
@@ -1712,8 +1712,36 @@ body{
     
                                 /* 擴大點擊範圍 */
                                 display: block;
-                                height: 100px;    
-                            }
+                                height: 100px;   
+
+                                /* 作為 div 的 基準點*/
+                                position: relative;
+                                
+                                div{
+                                    width: 90px;                                  
+                                    position: absolute;
+                                    left: 50%;
+                                    height: 80px;                                      
+                                    transform: translate(-50%, -50%);
+                                    // outline: 1px solid purple;
+                                    img{
+                                        width: 18px;
+                                        height: 18px;
+                                    } 
+                                }   
+                                .checkDay{
+                                    top: 54%;
+                                    img{
+                                        height: 18px;
+                                    }                                    
+                                }
+                                .checkNight{
+                                    top: 55%;
+                                    img{
+                                        height: 17.5px;
+                                    }                                    
+                                }                                                         
+                            }                       
                         }
                     }
                 }
