[前端][ UI ]解決"右側出現捲軸問題"、修改"溢出的對話方塊邊框"、調整"貓和月曆的位置+狗尾巴角度、尺寸"、新增"星星顆數"

--- a/public/styles/index/_main.scss
+++ b/public/styles/index/_main.scss
@@ -28,7 +28,7 @@ section.login{
     left: 50%;
     transform: translate(-50%, -50%);
     width: 340px;
-    border-radius: 5px;
+    border-radius: 6px;
     background: #FFFFFF;
     box-shadow: 0px 4px 60px #AAAAAA;
     display: none;
@@ -125,7 +125,7 @@ section.register{
     left: 50%;
     transform: translate(-50%, -50%);
     width: 340px;
-    border-radius: 5px;
+    border-radius: 6px;
     background: #FFFFFF;
     box-shadow: 0px 4px 60px #AAAAAA;
     display: none;
@@ -222,8 +222,8 @@ section.schedule{
     left: 50%;
     transform: translate(-50%, -50%);
     width: 340px;
-    height: 301px; //[new]
-    border-radius: 5px;
+    height: 301px; 
+    border-radius: 6px;
     background: #FFFFFF;
     box-shadow: 0px 4px 60px #AAAAAA;
     display: none;
@@ -356,24 +356,28 @@ body{
 
     main {
         display: flex;
+        justify-content: center;
+        align-items: center;
         position: relative;
         width: 100%;
-        height: 48.5vw;
-        
+        height: 45.5vw;   // [step 1]解決右側出現捲軸問題
+        overflow: hidden; // [step 2]解決右側出現捲軸問題        
+        // outline: 3px solid green;
         .background-box{
             position: absolute;
             width: 100%;
-            height: 48.5vw; 
+            height: 45.5vw;                     
+            // outline: 3px solid red;
         }
         .dayBox{
             .daytime{
                 position: absolute;   
-                width: 100%;
-                height: 48.5vw;                 
+                width: 100%; 
+                height: 45.5vw;                            
                 background: linear-gradient(180deg, #55b4f6, #b2ebfe, #b2ebfe);
                 z-index: -3;
-                overflow: hidden;  
-    
+                // outline: 3px solid red;  
+
                 #sun {
                     position: absolute;
                     top: 9%;
@@ -456,13 +460,13 @@ body{
                         position: absolute;                    
                         right: -8px;
                         top: 30px;
-                        border-top: 20px solid #fef9e8;
+                        border-top: 20px solid #fef9e8; 
                         border-right: 10px solid transparent;
-                        border-bottom: 20px solid #fef9e8;
-                        border-left: 25px solid #fef9e8;
-                        border-radius: 50% 10% 50% 50%;
-                        transform: rotate(30deg) translate(0px, -30px) rotate(20deg) rotateY(180deg) rotateX(180deg); 
-                        z-index: -3;                                
+                        border-bottom: 15px solid #fef9e8; 
+                        border-left: 25px solid #fef9e8; 
+                        border-radius: 50% 5% 50% 50%;
+                        transform: rotate(20deg) translate(0px, -30px) rotate(20deg) rotateY(180deg) rotateX(180deg); 
+                        z-index: -3;
                         .helix{
                             content: " ";
                             display: block;
@@ -473,8 +477,8 @@ body{
                             height: 20px;
                             border-radius: 50%;                       
                             background-color: #45aee2;                        
-                            transform: rotate(45deg);                  
-                        }
+                            transform: rotate(45deg);  
+                        }             
                     }  
                     
                     .collar {
@@ -1086,7 +1090,7 @@ body{
                 
                 #boat {
                     position: absolute;
-                    bottom: 330px;
+                    bottom: 300px;
                     z-index: 1;
                     transform: translateX(-100px);
                     animation: boatMove 30s linear infinite;
@@ -1198,10 +1202,10 @@ body{
                         transform: translateX(1200px);
                     }
                     50%{
-                        bottom: 310px;
+                        bottom: 280px;
                     }
                     100%{
-                        bottom: 338px;
+                        bottom: 308px;
                     }
                 }  
             }
@@ -1210,12 +1214,9 @@ body{
             .night{  
                 position: absolute;            
                 width: 100%;
-                height: 48.5vw; // <== 注意:處理多一周，背景調整高度(減少出現側邊卷軸出現，改調整切換月曆大小)                                        
-                background: linear-gradient(180deg, #000000, #000033); 
-                overflow: hidden;   
-
-                outline: 3px solid pink;
-    
+                height: 45.5vw; // <== 注意:處理多一周，背景調整高度(減少出現側邊卷軸出現，改調整切換月曆大小)                                        
+                background: linear-gradient(180deg, #000000, #000033);                  
+                
                 #moon{
                     position: absolute;
                     top: 6%;
@@ -1248,8 +1249,8 @@ body{
                     -webkit-transition: all 1200ms linear;
                     transition: all 1200ms linear; 
                 }
-                #star div:nth-child(1){left:75%;top:5%;animation-delay: 1s;}
-                #star div:nth-child(2){left:45%;top:7%;animation-delay: 2.7s;}
+                #star div:nth-child(1){left:78%;top:5%;animation-delay: 1s;}
+                #star div:nth-child(2){left:88%;top:22%;animation-delay: 2.7s;}
                 #star div:nth-child(3){left:18%;top:7%;animation-delay: 1.8s;}
                 #star div:nth-child(4){left:87%;top:8%;animation-delay: 2.2s;}
                 #star div:nth-child(5){left:92%;top:15%;animation-delay: 1.2s;}
@@ -1268,7 +1269,12 @@ body{
                 #star div:nth-child(18){left:10%;top:6%;animation-delay: 1.2s;}
                 #star div:nth-child(19){left:3%;top:4%;animation-delay: 2.3s;}
                 #star div:nth-child(20){left:31%;top:44%;animation-delay: 1.7s;}
-                #star div:nth-child(21){left:71%;top:6%;animation-delay: 1s;}
+                #star div:nth-child(21){left:4%;top:45%;animation-delay: 1s;}
+                #star div:nth-child(22){left:13%;top:48%;animation-delay: 1.2s;}
+                #star div:nth-child(23){left:16%;top:37%;animation-delay: 2.1s;}
+                #star div:nth-child(24){left:18%;top:26%;animation-delay: 1s;}
+                #star div:nth-child(25){left:80%;top:40%;animation-delay: 1s;}
+                #star div:nth-child(26){left:92%;top:37%;animation-delay: 1.5s;}
                 @keyframes starShine {
                     0% {
                         transform: scale(0.3) rotate(0deg);
@@ -1656,19 +1662,17 @@ body{
         }
         
         section.calendar {
-            margin: auto;
+            transform: scale(0.85, 0.85); // [白天: 5週適用，6週要調整成 0.75]
             z-index: 10; 
-            transform: scale(0.9, 0.9); // [白天: 5週適用，6週要調整成 0.8]
             // outline: 3px solid yellow;
 
             #calendar {
-                // margin-bottom: 30px; //[old]
                 width: 700px;          
                 border-collapse: collapse;
                 background-color: white;
                 border-radius: 3%;
                 overflow: hidden;
-                // outline: 3px solid black;
+                // outline: 3px solid violet;
                 
                 thead {
                     tr{
