--- a/views/index.ejs
+++ b/views/index.ejs
@@ -237,6 +237,11 @@
           <div></div>
           <div></div>
           <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
 
         <div id="forest">
