--- a/public/styles/base/_normalize.scss
+++ b/public/styles/base/_normalize.scss
@@ -348,7 +348,6 @@ template {
   display: none;
 }
 
-
 /* 全域 border box */
 *, *::before, *::after {
 	box-sizing: border-box;
@@ -359,18 +358,24 @@ template {
   padding: 0;
 }
 
+html{
+  font-size: 1rem;
+  font-family: 'Noto Sans TC', sans-serif;
+}
+
+h2, h4, p, input, label{   
+  color: #666666;
+}
+
 ol, ul{
   list-style: none;
 }
 
+// todolist 資料夾
 a{
   text-decoration: none;
 }
 
 input, button{
   border: none;
-}
-
-button{
-  cursor: pointer;
 }
