[前端][ UI ]EJS模組化分檔案、新增熱氣球、sidebar.ejs 重組 UI 結構並把資料鑲嵌到熱氣球上、更換 icon - 垃圾桶、暫時不使用 icon - 完成勾勾、新增SweetAlert套件、時間的十位數都要自動補零

--- a/public/styles/layout.scss
+++ b/public/styles/layout.scss
@@ -4,7 +4,7 @@
 // 導入全局樣式
 @import "partials/header";
 // @import "partials/footer";
-// @import "partials/sidebar";
+@import "partials/sidebar";
 
 // 導入頁面樣式
 @import "pages/index";
