--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
   <div class="loginData">
     <div class="loginDataTitle">
       <h2>登入會員帳號</h2>
-      <img src="../img/icon/login/icon_close.png" onclick="change('close')" alt="刪除登入會員帳號對話方塊">
+      <img src="../../img/icon/login/icon_close.png" onclick="change('close')" alt="刪除登入會員帳號對話方塊">
     </div>
 
     <input type="email" id="loginEmail" placeholder="輸入電子信箱">
@@ -29,7 +29,7 @@
   <div class="registerData">
     <div class="registerDataTitle">
       <h2>註冊會員帳號</h2>
-      <img src="../img/icon/login/icon_close.png" onclick="change('close')" alt="刪除註冊會員帳號對話方塊">
+      <img src="../../img/icon/login/icon_close.png" onclick="change('close')" alt="刪除註冊會員帳號對話方塊">
     </div>
     
     <input type="text" id="registerName" placeholder="輸入姓名">
@@ -55,7 +55,7 @@
   <div class="scheduleData">
     <div class="scheduleTitle">
       <h2>Let's start planning!</h2>
-      <img src="../img/icon/login/icon_close.png" onclick="change('close')" alt="delete scheduled date dialog box">
+      <img src="../../img/icon/login/icon_close.png" onclick="change('close')" alt="delete scheduled date dialog box">
     </div>
     
     <form class="scheduleDetailData">
