--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -665,6 +665,231 @@ header nav ul li a {
   color: #666666;
 }
 
+aside {
+  display: flex;
+  width: 20rem;
+  height: 20rem;
+  position: relative;
+}
+aside .hot-air-balloon {
+  width: 20rem;
+  height: 20rem;
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+aside .hot-air-balloon .balloon {
+  width: 15rem;
+  height: 15rem;
+  background-color: #F27C68;
+  border-radius: 50%;
+  border: 4px solid #D7E7EA;
+  position: absolute;
+  left: 50%;
+  top: 52px;
+  transform: translate(-50%);
+  -webkit-animation: moving-balloon 3s ease infinite;
+          animation: moving-balloon 3s ease infinite;
+  z-index: 1;
+}
+aside .hot-air-balloon .balloon section.weather {
+  position: relative;
+  text-align: center;
+  margin-top: 30%;
+  z-index: 3;
+}
+aside .hot-air-balloon .balloon section.weather .date {
+  color: #004B97;
+  margin-top: 15%;
+}
+aside .hot-air-balloon .balloon section.weather .city {
+  color: #f2f5ff;
+  margin-top: -10%;
+}
+aside .hot-air-balloon .balloon section.weather .description {
+  color: #cacaca;
+  margin-top: 1%;
+}
+aside .hot-air-balloon .balloon section.weather .weatherIcon {
+  width: 5vw;
+  height: 5vw;
+  margin-top: -5%;
+}
+aside .hot-air-balloon .balloon::after {
+  width: 10rem;
+  height: 2rem;
+  border-top: 3.75rem solid #F27C68;
+  border-left: 1.85rem solid transparent;
+  border-right: 1.85rem solid transparent;
+  content: "";
+  position: absolute;
+  top: 200px;
+  left: 50%;
+  transform: translate(-50%);
+}
+aside .hot-air-balloon .balloon::before {
+  width: 100px;
+  height: 25px;
+  background-color: #E86B5A;
+  border-radius: 5px;
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 16rem;
+  transform: translate(-50%);
+}
+aside .hot-air-balloon .basket {
+  width: 5rem;
+  height: 3rem;
+  background: #D1C1A6;
+  border-radius: 0 0 8px 8px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  top: 24.5rem;
+  -webkit-animation: moving-basket 3s ease infinite;
+          animation: moving-basket 3s ease infinite;
+}
+aside .hot-air-balloon .basket:before {
+  width: 5.5rem;
+  height: 1rem;
+  background: #B2A082;
+  border-radius: 3px;
+  content: "";
+  position: absolute;
+  top: -1rem;
+  left: 50%;
+  transform: translate(-50%);
+}
+aside .hot-air-balloon .basket:after {
+  width: 2rem;
+  height: 3.3rem;
+  border-left: 2px solid #B2A082;
+  border-right: 2px solid #B2A082;
+  content: "";
+  position: absolute;
+  top: -3.8rem;
+  left: 50%;
+  transform: translate(-50%) perspective(50px) rotateX(-40deg);
+}
+aside .hot-air-balloon .cloud div {
+  background: white;
+  border-radius: 3.15rem;
+  position: absolute;
+  -webkit-animation: moving-cloud 3s ease infinite;
+          animation: moving-cloud 3s ease infinite;
+  z-index: 2;
+}
+aside .hot-air-balloon .cloud div::before {
+  width: 3.75rem;
+  height: 3.75rem;
+  background: white;
+  border-radius: 50%;
+  content: "";
+  position: absolute;
+  top: -2.5rem;
+  left: 1.25rem;
+  z-index: -1;
+}
+aside .hot-air-balloon .cloud div::after {
+  width: 3.15rem;
+  height: 3.15rem;
+  background: white;
+  border-radius: 50%;
+  content: "";
+  position: absolute;
+  top: -1.85rem;
+  right: 1.55rem;
+  z-index: -1;
+}
+aside .hot-air-balloon .cloud div:nth-child(1) {
+  width: 140px;
+  height: 1.85rem;
+  top: 6.25rem;
+  right: -5rem;
+  text-align: center;
+}
+aside .hot-air-balloon .cloud div:nth-child(1) #temp {
+  position: relative;
+  z-index: 3;
+}
+aside .hot-air-balloon .cloud div:nth-child(1) #temp .temp {
+  color: #019272;
+}
+aside .hot-air-balloon .cloud div:nth-child(1) #temp a, aside .hot-air-balloon .cloud div:nth-child(1) #temp .divider {
+  color: #019272;
+  opacity: 0.4;
+}
+aside .hot-air-balloon .cloud div:nth-child(1) #temp a:hover, aside .hot-air-balloon .cloud div:nth-child(1) #temp .active {
+  opacity: 1;
+}
+aside .hot-air-balloon .cloud div:nth-child(2) {
+  width: 150px;
+  height: 4rem;
+  top: 28rem;
+  right: 8rem;
+  text-align: center;
+  padding: 10px;
+}
+aside .hot-air-balloon .cloud div:nth-child(2) p {
+  font-weight: bold;
+}
+aside .hot-air-balloon .cloud div:nth-child(2) .body-temp {
+  color: #ef767a;
+}
+aside .hot-air-balloon .cloud div:nth-child(2) .temp-max, aside .hot-air-balloon .cloud div:nth-child(2) .temp-min {
+  color: #7d7abc;
+}
+@-webkit-keyframes moving-balloon {
+  0% {
+    transform: translate(-50%);
+  }
+  50% {
+    transform: translate(-50%, -10%);
+  }
+}
+@keyframes moving-balloon {
+  0% {
+    transform: translate(-50%);
+  }
+  50% {
+    transform: translate(-50%, -10%);
+  }
+}
+@-webkit-keyframes moving-basket {
+  0% {
+    transform: translate(-50%);
+  }
+  50% {
+    transform: translate(-50%, -40%);
+  }
+}
+@keyframes moving-basket {
+  0% {
+    transform: translate(-50%);
+  }
+  50% {
+    transform: translate(-50%, -40%);
+  }
+}
+@-webkit-keyframes moving-cloud {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(-7%);
+  }
+}
+@keyframes moving-cloud {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(-7%);
+  }
+}
+
 :root {
   --sand-color: #EBC69F;
   --sand-accent: #EABB8C;
@@ -2376,102 +2601,124 @@ body main section.calendar #calendar tbody .day td a .checkNight img {
 }
 
 body {
-  background-color: #00E3E3;
+  background-color: #DCF1F2;
 }
-body main {
-  display: flex;
-  flex-direction: column;
+body main .todayPlan {
+  width: 73%;
+  height: 100%;
+  overflow-y: auto;
 }
-body main .date, body main .title, body main .warning {
-  text-align: center;
-}
-body main .date {
-  color: #FFFFFF;
-}
-body main .title {
-  color: #004B97;
-}
-body main form {
+body main .todayPlan .planBox {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
-body main form input, body main form button {
-  padding: 0.25rem 0.5rem;
-  margin: 0.1rem;
-  font-size: 1.75rem;
+body main .todayPlan .planBox .title {
+  text-align: center;
+  color: #004B97;
 }
-body main form input[type=time] {
-  width: 190px;
-  height: 40.19px;
+body main .todayPlan .planBox form {
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: space-around;
+  margin-top: -32px;
+}
+body main .todayPlan .planBox form .inputBox {
+  width: 100%;
+  height: 20%;
   text-align: center;
 }
-body main form button {
-  background-color: rgb(1, 146, 114);
-  color: #fff;
-}
-body main .warning {
-  color: #ff0000;
-}
-body main .sort button {
+body main .todayPlan .planBox form .inputBox input, body main .todayPlan .planBox form .inputBox button {
   padding: 0.25rem 0.5rem;
-  margin: 0.1rem;
-  font-size: 1.75rem;
-  background-color: rgb(1, 146, 114);
-  color: #fff;
+  margin: 0.15rem;
+  font-size: 1.25rem;
+  border-radius: 5px;
 }
-body main section.todoBox {
+body main .todayPlan .planBox form .inputBox input[type=time] {
+  width: 155px;
+  height: 40.19px;
+}
+body main .todayPlan .planBox form .inputBox input[type=text] {
+  width: 420px;
+  height: 40.19px;
+}
+body main .todayPlan .planBox form .inputBox #addBtn {
+  width: 50px;
+  height: 50px;
+  position: relative;
+  left: -3px;
+  bottom: -18px;
+}
+body main .todayPlan .planBox form .todoBox {
   width: 55vw;
-  margin: 0 auto;
+  height: 100%;
+  margin: 20px 0;
+  border-radius: 5px;
+  overflow: hidden;
+  outline: 3px solid #448899;
 }
-body main section.todoBox .warning {
-  color: blueviolet;
-}
-body main section.todoBox div.todo {
+body main .todayPlan .planBox form .todoBox div.todo {
   display: flex;
   justify-content: center;
   background-color: #fff;
-  margin-bottom: 1rem;
   -webkit-animation: scaleUp 0.3s forwards;
           animation: scaleUp 0.3s forwards;
   transition: all 0.1s ease;
-  outline: 1px solid green;
+  outline: 1px solid #cfe4e5;
+  outline: 1px solid pink;
 }
-body main section.todoBox div.todo .todo-time {
+body main .todayPlan .planBox form .todoBox div.todo .todo-time {
   width: 15%;
-  outline: 1px solid red;
   color: #004B97;
+  color: #919191;
+  padding: 5px 0;
+  text-align: center;
 }
-body main section.todoBox div.todo .todo-text {
+body main .todayPlan .planBox form .todoBox div.todo .todo-text {
   width: 80%;
-  outline: 1px solid blue;
   color: #004B97;
+  color: #56596A;
+  line-height: 38px;
 }
-body main section.todoBox div.todo button {
+body main .todayPlan .planBox form .todoBox div.todo button {
   align-self: center;
   display: block;
   width: 3vw;
   height: 3vw;
   padding: 7px;
-  outline: 1px solid black;
 }
-body main section.todoBox div.todo button img {
+body main .todayPlan .planBox form .todoBox div.todo button img {
   display: block;
   width: 2vw;
   height: 2vw;
   pointer-events: none;
-  outline: 1px solid orangered;
 }
-body main section.todoBox div.todo button.complete {
+body main .todayPlan .planBox form .todoBox div.todo button.complete {
+  display: none;
   background-color: rgb(50, 255, 50);
 }
-body main section.todoBox div.todo button.remove {
-  background-color: red;
+body main .todayPlan .planBox form .todoBox div.todo button.remove {
+  background-color: #fff;
 }
-body main section.todoBox .done {
+body main .todayPlan .planBox form .todoBox .done {
+  display: none;
   opacity: 0.5;
   text-decoration: line-through;
   text-decoration-thickness: 0.2rem;
+}
+body main .todayPlan .planBox .warning {
+  color: #ff0000;
+}
+body main .todayPlan .planBox .sort button {
+  padding: 0.25rem 0.5rem;
+  margin: 0.1rem;
+  font-size: 1.75rem;
+  background-color: rgb(1, 146, 114);
+  color: #fff;
 }
 
 @-webkit-keyframes scaleUp {
