--- a/public/styles/pages/_todolist.scss
+++ b/public/styles/pages/_todolist.scss
@@ -1,103 +1,151 @@
 body{
-    background-color: #00E3E3;
+    background-color: #DCF1F2;
     main{
-        display: flex;
-        flex-direction: column;
-        .date, .title, .warning{
-            text-align: center;
-        }
-        .date{
-            color: #FFFFFF;
-        }
-        .title{
-            color: #004B97;
-        }
-        form{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            input, button{
-                padding: 0.25rem 0.5rem;
-                margin: 0.1rem;
-                font-size: 1.75rem;
-            }
-            input[type="time"]{
-                width:  190px;
-                height: 40.19px;
-                text-align: center;
-            }
-            button{
-                background-color: rgb(1, 146, 114);
-                color: #fff;
-            }
-        }
-        .warning{
-            color: #ff0000;
-        }
-        .sort button{
-            padding: 0.25rem 0.5rem;
-            margin: 0.1rem;
-            font-size: 1.75rem;
-            background-color: rgb(1, 146, 114);
-            color: #fff;
-        }
-        section.todoBox{
-            width: 55vw;
-            margin: 0 auto;
-            // outline: 1px solid red;
-            .warning{
-                color: blueviolet;
-            }
-            div.todo{
+        .todayPlan{
+            width: 73%;
+            height: 100%;
+            overflow-y: auto;
+            // outline: 1px solid blueviolet;   
+            .planBox{
+                width: 100%;
                 display: flex;
                 justify-content: center;
-                background-color: #fff;
-                margin-bottom: 1rem;
-                // 建立 todoItem 出現的動態效果 
-                animation: scaleUp 0.3s forwards;
-                // 綠色按鈕 completeBtn 'done'模式 漸進效果
-                transition: all 0.1s ease;
-    
-                outline: 1px solid green;
-                .todo-time{
-                    width: 15%;
-                    outline: 1px solid red;
-                    color: #004B97; 
-                }
-                .todo-text{
-                    width: 80%;
-                    outline: 1px solid blue;
-                    color: #004B97; 
-                } 
-                button{
-                    align-self: center;
-                    display: block;
-                    width: 3vw;
-                    height: 3vw;
-                    padding: 7px;
-                    outline: 1px solid black;
-                    img{
-                        display: block;
-                        width: 2vw;
-                        height: 2vw;
-                        pointer-events: none;  // 避免 img 元素被監聽
-                        outline: 1px solid orangered;
+                align-items: center;
+                flex-direction: column;
+                // outline: 1px solid orangered; 
+                .title{
+                    text-align: center;
+                    color: #004B97;
+                    // outline: 2px solid #f93af9;     
+                }         
+     
+                form{
+                    width: 85%;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    align-content: space-around;
+                    margin-top: -32px;
+                    // outline: 5px solid blue;   
+
+                    .inputBox{
+                        width: 100%;
+                        height: 20%;
+
+                        text-align: center;
+                        // outline: 5px solid black;   
+                        input, button{
+                            padding: 0.25rem 0.5rem;
+                            margin: 0.15rem;
+                            font-size: 1.25rem;
+                            border-radius: 5px;
+                        }
+                        input[type="time"]{
+                            width:  155px;
+                            height: 40.19px;
+                        }
+                        input[type="text"]{
+                            width:  420px; //[old]
+                            // width:  450px;
+                            height: 40.19px;
+                            
+                        }
+                        #addBtn{
+                            width: 50px;
+                            height: 50px;
+                            position: relative;
+                            left: -3px;
+                            bottom: -18px;
+                            // outline: 3px solid red;
+                        }
                     }
-                } 
-                button.complete{
-                    background-color: rgb(50, 255, 50);
-                } 
-                button.remove{
-                    background-color: red;
-                } 
-            
-            }
-            .done{
-                opacity: 0.5;
-                text-decoration: line-through;
-                text-decoration-thickness: 0.2rem;
-            }
-        }
+                    
+                    .todoBox{
+                        width: 55vw;
+                        height: 100%;
+                        margin: 20px 0;
+                        border-radius: 5px;
+                        overflow: hidden;
+                        
+                        outline: 3px solid #448899;
+                        
+                        // .warning{
+                        //     color: blueviolet;
+                        // }
+                        div.todo{
+                            display: flex;
+                            justify-content: center;
+                            background-color: #fff;
+                            // 建立 todoItem 出現的動態效果 
+                            animation: scaleUp 0.3s forwards;
+                            // 綠色按鈕 completeBtn 'done'模式 漸進效果
+                            transition: all 0.1s ease;
+                
+                            outline: 1px solid #cfe4e5;
+                            outline: 1px solid pink; //[暫時]
+                            .todo-time{
+                                width: 15%;
+                                color: #004B97; 
+                                color: #919191;
+                                padding: 5px 0;
+                                text-align: center;
+                                // outline: 1px solid red;
+                            }
+                            .todo-text{
+                                width: 80%;
+                                color: #004B97; 
+                                color: #56596A;
+                                line-height: 38px;
+                                // outline: 1px solid blue;
+                            } 
+                            button{
+                                align-self: center;
+                                display: block;
+                                width: 3vw;
+                                height: 3vw;
+                                padding: 7px;
+                                // outline: 1px solid black;
+                                img{
+                                    display: block;
+                                    width: 2vw;
+                                    height: 2vw;
+                                    pointer-events: none;  // 避免 img 元素被監聽
+                                    // outline: 1px solid orangered;
+                                }
+                            } 
+                            button.complete{
+                                display: none; //[暫時不用此按鈕，之會優化網站再恢復此功能!]
+                                background-color: rgb(50, 255, 50);
+                            } 
+                            button.remove{
+                                background-color: #fff;
+                                // outline: 1px solid red;
+                            } 
+                        }
+                        .done{
+                            display: none; //[暫時不用此按鈕，之會優化網站再恢復此功能!]
+                            opacity: 0.5;
+                            text-decoration: line-through;
+                            text-decoration-thickness: 0.2rem;
+                        }
+                    }
+                }   
+                // .title, .warning{
+                //     width: 53vw; //[new]
+                //     text-align: center;     
+                // }
+                .warning{
+                    color: #ff0000;
+                }
+                .sort button{
+                    padding: 0.25rem 0.5rem;
+                    margin: 0.1rem;
+                    font-size: 1.75rem;
+                    background-color: rgb(1, 146, 114);
+                    color: #fff;
+                }
+            }  
+        } 
     }
 }
 
