--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -223,3 +223,7 @@
     <tbody></tbody>
   </table>
 </section> 
+
+<script src="../js/calendar.js"></script>
+<script src="../js/member.js"></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js" integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
