--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,26 +1,33 @@
-<!-- <header>
-    <section class="weather">
-        <h2 class="city">city</h2>
-        <h3 class="description">description</h3>
-        <img>
-        <h1>
-            <span class="temp">temperature</span>&nbsp;
-            <a id="celsius" class="celsius active" href="#" onclick="switchToC()">&#8451;</a>
-            <span class="divider">&#124;</span>
-            <a id="fahrenheit" class="fahrenheit" href="#" onclick="switchToF()">&#8457;</a>
-        </h1>
-        <h3>RealFeel&nbsp;&nbsp;
-            <span class="feels-like"></span>
-        </h3>
-        <h3>&uarr;&nbsp;
-            <span class="temp-max"></span>&nbsp;&nbsp;
-            &darr;&nbsp;
-            <span class="temp-min"></span>
-        </h3>
-    </section> 
-
-    <ul>
-        <li><a onclick="booking()">預定行程</a></li>  
-        <li><a class="stateSwitch" onclick="change('login')">登入/註冊</a></li>
-    </ul>
-</header> -->
+<aside>
+    <section class="hot-air-balloon">
+        <div class="balloon">
+            <section class="weather">
+                <h1 class="date"><%= time %></h1>
+                <h2 class="city">city</h2>
+                <h3 class="description">description</h3>
+                <img class="weatherIcon">               
+            </section> 
+        </div>
+        <div class="basket"></div>  
+        <div class="cloud">
+            <div>
+                <h3 id="temp">
+                    <span class="temp">temperature</span>&nbsp;
+                    <a id="celsius" class="celsius active" href="#" onclick="switchToC()">&#8451;</a>
+                    <span class="divider">&#124;</span>
+                    <a id="fahrenheit" class="fahrenheit" href="#" onclick="switchToF()">&#8457;</a>
+                </h3>
+            </div>
+            <div>               
+                <p class="body-temp">RealFeel&nbsp;&nbsp;
+                    <span class="feels-like"></span>
+                </p>
+                <p>&uarr;&nbsp;
+                    <span class="temp-max"></span>&nbsp;&nbsp;
+                    &darr;&nbsp;
+                    <span class="temp-min"></span>
+                </p>
+            </div>
+        </div>
+    </section>
+</aside>
